Added react-css-modules, browserslist config for autoprefixer Replaced self initialization with index.js

--- a/src/todo/todo.scss
+++ b/src/todo/todo.scss
@@ -1,7 +1,9 @@
+@import "../global-styles/colors.scss";
+
 .delete {
   cursor: pointer;
   &:hover{
-    background-color: orangered;
+    background-color: $delete-red;
   }
 }
 
